# CreationApiWebV2

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py  test_base_model.py  test_create_table.py  views.py
app/postgreSql/: views.py
app/postgreSql/connexion_db/: db_PostgreSql_web.py
app/postgreSql/cron_job/: cron_db_api_key.py
app/postgreSql/json_base_model/: add_columns_model.py  add_rows_model.py  create_schema_model.py  create_table_model.py  json_modify_value_row_model.py  rename_columns.py  rename_table_model.py  tuple_json_add_row.py  type_data.py
app/postgreSql/request/: Request_PostgreSql.py
static/JS/: activate_refresh_token.js  animate_spin.js  show_password.js  webSocket.js
static/JS/JSON_transfer_conversion_backend/: create_json_column.js  json_create_schema.js  json_modify_row.js  json_rename_columns.js
static/JS/component_ui/: action_modify_value_row.js  add_column.js  add_row.js  display_columns_list_with_id.js  display_table_header.js  display_table_row.js  display_table_schema.js  (+3 more)
static/css/: create_db_postgre.css  global.css  global_postgre.css  login_postgre.css  method_crud_postgre.css  table.css
templates/: modify_row.html  rename_multi_columns.html  tables.html  tables_name.html
templates/postgreFrontHtml/: create_schema.html  create_table.html  display_table.html  list_schema_table.html  modify_row.html  rename_multi_columns.html  rename_one_columns.html  tables.html  tables_name.html
zz-documenation/: get.txt  principe_de_base_de mon_projet.txt  put.txt
zz-documenation/postgreSql/: interface_graphique.txt
(+179 files in other folders)
